# eightfold-internship-assignment

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: minimal_config.json  sample_config.json
samples/: expected_output.json  minimal_output.json  recruiter.csv
scripts/: generate_sample_pdf.py
src/eightfold_profile/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
src/eightfold_profile/canonical/: __init__.py  builder.py
src/eightfold_profile/confidence/: __init__.py  scorer.py
src/eightfold_profile/merging/: __init__.py  merger.py
src/eightfold_profile/normalization/: __init__.py  dates.py  email.py  location.py  phone.py  skills.py
src/eightfold_profile/parsing/: __init__.py  csv_parser.py  pdf_parser.py
src/eightfold_profile/projection/: __init__.py  projector.py  provenance_projection.py
src/eightfold_profile/validation/: __init__.py  candidate_schema.json  validator.py
tests/: test_canonical.py  test_location.py  test_merging.py  test_normalization.py  test_parsing.py  test_pipeline.py  test_provenance_projection.py  test_validation.py
